[tool.poetry]
name = "fexrd"
version = "v2022.1"
description = "Feature EXtractor for FFRI Dataset"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/FFRI/FEXRD"
repository = "https://github.com/FFRI/FEXRD"
authors = ["Koh M. Nakagawa <ko.nakagawa@ffri.jp>"]
include = ["LICENSE"]
keywords = ["Malware", "FFRI Dataset", "Machine Learning"]

[tool.poetry.dependencies]
python = ">=3.7"
lief = "^0.11.1"
pandas = "^1.0.4"
scikit-learn = "^0.23.2"
typer = "^0.4.1"
lightgbm = "^3.1.1"
beautifulsoup4 = "^4.9.3"
black = "^22.6.0"
flake8-black = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
mypy = "^0.790"
flake8 = "^3.8.4"
isort = "^4.3.21"
pytest-datadir = "^1.3.1"
flake8-isort = "^4.0.0"
pre-commit = "^2.9.3"
mkdocs = "^1.1.2"
GitPython = "^3.1.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 80
