[tool.poetry]
name = "fexrd"
version = "v2024.1"
description = "Feature EXtractor for FFRI Dataset"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/FFRI/FEXRD"
repository = "https://github.com/FFRI/FEXRD"
authors = ["Koh M. Nakagawa <ko.nakagawa@ffri.jp>"]
include = ["LICENSE"]
keywords = ["Malware", "FFRI Dataset", "Machine Learning"]
packages = [{include = "fexrd", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
lief = "^0.14.1"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
typer = "^0.12.3"
lightgbm = "^4.3.0"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-datadir = "^1.5.0"
pre-commit = "^3.7.1"
gitpython = "^3.1.43"
pandas-stubs = "^2.2.2.240514"
types-beautifulsoup4 = "^4.12.0.20240511"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
